increase max width of .components-base-control class for sidebar select dropdowns

--- a/src/sass/_global-blocks.scss
+++ b/src/sass/_global-blocks.scss
@@ -45,3 +45,8 @@
 		} // body:not(.has-sidebar) &
 	} // .site-content &
 } // .has-custom-background
+
+// Ensure sidebar fields span 100% width.
+.components-base-control {
+	width: 100%;
+} // .components-base-control
