--- a/src/blocks/github-gist/editor.scss
+++ b/src/blocks/github-gist/editor.scss
@@ -10,6 +10,10 @@
 	overflow: hidden;
 } // .wp-block-wds-gihub-gist
 
+.editor-block-contextual-toolbar .editor-block-toolbar {
+	width: 100%;
+} // .editor-block-contextual-toolbar .editor-block-toolbar
+
 .gist-block-controls {
 	padding: 0.125rem;
 
@@ -17,9 +21,9 @@
 		min-width: 300px;
 
 		@include media($tablet-portrait) {
-			min-width: 350px;
+			min-width: 450px;
 		}
-	} // input[type="url"]
+	} // input[type='url']
 
 	.button {
 		font-family: $default-font;
