Adjusts z-indexes on video and adjacent elements for better backend display

--- a/src/sass/_global-blocks.scss
+++ b/src/sass/_global-blocks.scss
@@ -26,7 +26,12 @@
 		top: 50%;
 		transform: translate(-50%, -50%);
 		width: 100%;
-		z-index: -1;
+		z-index: 1;
+
+		~ * {
+			position: relative;
+			z-index: 2;
+		}
 	} // .video-container
 } // .has-video-background
 
