--- a/src/blocks/accordion/frontend/style.scss
+++ b/src/blocks/accordion/frontend/style.scss
@@ -1,18 +1,25 @@
 // Front-end styles.
 
 .wdsblocks-accordion {
+	padding: 10px 15px;
+	border: 1px solid #efefef;
+	+ .wdsblocks-accordion {
+		border-top: none;
+	}
 	&__title {
 		position: relative;
 		width: 100%;
 		display: block;
 		text-align: left;
 		margin: 0;
-		padding: 10px 0;
+		padding: 10px 50px 10px 0;
+		font-size: 20px;
 		line-height: 1.5;
 		background: transparent;
 		color: #000 !important;
 		font-weight: 700;
 		white-space: normal !important;
+		cursor: pointer;
 		&:after,
 		&:before {
 			width: 16px;
@@ -21,22 +28,27 @@
 			display: block;
 			content: '';
 			position: absolute;
-			top: 20px;
-			right: 5px;
-			transition: all 0.15s ease;
+			top: 23px;
+			right: 10px;
+			transition: all 0.2s ease;
 		}
 		&:after {
 			transform: rotate(-90deg);
 		}
 	}
 	&__content {
-		display: none;
 		outline: none;
+		transition: all 0.2s ease;
+		overflow: hidden;
+		height: 0;
+		&--inner {
+			padding: 10px 0 15px;
+		}
 	}
 	&.is-expanded {
 		.wdsblocks-accordion__title {
 			&:after {
-				display: none;
+				transform: rotate(0);
 			}
 		}
 		.wdsblocks-accordion__content {
