--- a/src/blocks/carousel/editor.scss
+++ b/src/blocks/carousel/editor.scss
@@ -1,6 +1,13 @@
 // WordPress editor styles.
-$color-blue: rgb(33, 175, 194);
+$color-alabaster: #f9f9f9;
+$color-gray: #808080;
 
 .wp-block-wdsblocks-carousel {
-	color: $color-blue;
+
+	.is-selected &,
+	.has-child-selected & {
+		background: $color-alabaster;
+		border: 1px dashed $color-gray;
+		padding: 2rem;
+	}
 }
