Adding accordion group settings

--- a/src/blocks/accordion/frontend/style.scss
+++ b/src/blocks/accordion/frontend/style.scss
@@ -42,7 +42,7 @@
 		overflow: hidden;
 		height: 0;
 		&--inner {
-			padding: 10px 0 15px;
+			padding: 10px 50px 15px 0;
 		}
 	}
 	&.is-expanded {
