Revert "Add selected/active styling for custom blocks"
This reverts commit 397f317820db558b23a3d3c71b44c40c9703aa4d.

--- a/src/blocks/carousel-slide/editor.scss
+++ b/src/blocks/carousel-slide/editor.scss
@@ -1,13 +1,6 @@
 // WordPress editor styles.
-$color-gallery: #eee;
-$color-gray: #808080;
+$color-blue: rgb(33, 175, 194);
 
 .wp-block-wdsblocks-carousel-slide {
-
-	.is-selected &,
-	.has-child-selected & {
-		background: $color-gallery;
-		border: 1px dashed $color-gray;
-		padding: 2rem;
-	}
+	color: $color-blue;
 }
