--- a/src/blocks/carousel/editor.scss
+++ b/src/blocks/carousel/editor.scss
@@ -1,13 +1,6 @@
 // WordPress editor styles.
-$color-alabaster: #f9f9f9;
-$color-gray: #808080;
+$color-blue: rgb(33, 175, 194);
 
 .wp-block-wdsblocks-carousel {
-
-	.is-selected &,
-	.has-child-selected & {
-		background: $color-alabaster;
-		border: 1px dashed $color-gray;
-		padding: 2rem;
-	}
+	color: $color-blue;
 }
