Implement edit mode functionality, styling

--- a/src/blocks/carousel/editor.scss
+++ b/src/blocks/carousel/editor.scss
@@ -1,6 +1,7 @@
 // WordPress editor styles.
-$color-blue: rgb(33, 175, 194);
+@import '../../sass/mixins';
 
 .wp-block-wdsblocks-carousel {
-	color: $color-blue;
+
+	@include edit-mode;
 }
