--- a/src/blocks/carousel-slide/editor.scss
+++ b/src/blocks/carousel-slide/editor.scss
@@ -1,6 +1,7 @@
 // WordPress editor styles.
-$color-blue: rgb(33, 175, 194);
+@import '../../sass/mixins';
 
 .wp-block-wdsblocks-carousel-slide {
-	color: $color-blue;
+
+	@include edit-mode('.edit-mode &');
 }
