--- a/src/blocks/accordion-group/editor.scss
+++ b/src/blocks/accordion-group/editor.scss
@@ -6,6 +6,7 @@
 
 .editor-styles-wrapper {
 	.wp-block-wdsblocks-accordion-group {
+		padding: 1rem;
 		&__title {
 			width: 100%;
 			display: block;
