--- a/src/blocks/accordion/frontend/style.scss
+++ b/src/blocks/accordion/frontend/style.scss
@@ -2,7 +2,6 @@
 
 .wp-block-wdsblocks {
 	&-accordion {
-		padding: 10px 15px;
 		border: 1px solid #efefef;
 		+ .wp-block-wdsblocks-accordion {
 			border-top: none;
@@ -13,7 +12,7 @@
 			display: block;
 			text-align: left;
 			margin: 0;
-			padding: 10px 50px 10px 0;
+			padding: 15px 50px 15px 15px;
 			font-size: 20px;
 			line-height: 1.5;
 			background: transparent;
@@ -23,18 +22,22 @@
 			cursor: pointer;
 			&:after,
 			&:before {
-				width: 16px;
-				height: 4px;
-				background-color: #333;
-				display: block;
 				content: '';
 				position: absolute;
-				top: 23px;
-				right: 10px;
+				top: 22px;
+				right: 22px;
 				transition: all 0.2s ease;
+				border: solid black;
+				border-width: 0 3px 3px 0;
+				display: inline-block;
+				padding: 3px;
+				transform: rotate(45deg);
 			}
-			&:after {
-				transform: rotate(-90deg);
+			&:before {
+				top: 26px;
+				opacity: 0;
+				visibility: hidden;
+				transform: rotate(-135deg);
 			}
 		}
 		&__content {
@@ -43,13 +46,18 @@
 			overflow: hidden;
 			height: 0;
 			&--inner {
-				padding: 10px 50px 15px 0;
+				padding: 5px 50px 15px 15px;
 			}
 		}
 		&.is-expanded {
 			.wp-block-wdsblocks-accordion__title {
 				&:after {
-					transform: rotate(0);
+					opacity: 0;
+					visibility: hidden;
+				}
+				&:before {
+					opacity: 1;
+					visibility: visible;
 				}
 			}
 			.wp-block-wdsblocks-accordion__content {
