--- a/src/blocks/carousel-slide/editor.scss
+++ b/src/blocks/carousel-slide/editor.scss
@@ -4,4 +4,9 @@
 .wp-block-wdsblocks-carousel-slide {
 
 	@include edit-mode(".edit-mode &");
+
+	.wp-block[data-type="core/heading"] {
+		margin-left: auto;
+		margin-right: auto;
+	}
 }
