--- a/src/sass/_mixins.scss
+++ b/src/sass/_mixins.scss
@@ -1,10 +1,9 @@
-@import "./variables";
+@import './variables';
 
 // Admin styling for blocks in edit mode.
-@mixin edit-mode($selector: "&.edit-mode") {
-
+@mixin edit-mode($selector: '&.edit-mode') {
 	#{$selector} {
 		border: 1px dashed $color-grey;
-		padding: 2rem;
+		padding: 3rem;
 	}
 }
