--- a/src/blocks/accordion/editor.scss
+++ b/src/blocks/accordion/editor.scss
@@ -1,11 +1,15 @@
 @import '../../sass/mixins';
 
-.wp-block-wdsblocks-accordion {
-	@include edit-mode;
+.edit-mode {
+	.wp-block-wdsblocks-accordion {
+		border: 1px dashed $color-grey;
+		padding: 3rem;
+	}
 }
 
 .editor-styles-wrapper {
 	.wp-block-wdsblocks-accordion {
+		padding: 10px;
 		&__title {
 			position: relative;
 			width: 100%;
