Remove margins on slide blocks in preview mode

--- a/src/blocks/carousel/editor.scss
+++ b/src/blocks/carousel/editor.scss
@@ -20,5 +20,10 @@
 		.block-list-appender {
 			display: none;
 		}
+
+		.wp-block[data-type="wdsblocks/carousel-slide"] {
+			margin-bottom: 0;
+			margin-top: 0;
+		}
 	}
 }
