--- a/src/blocks/carousel-slide/frontend/style.scss
+++ b/src/blocks/carousel-slide/frontend/style.scss
@@ -1,6 +1,9 @@
 // Front-end styles.
-$color-red: rgb(206, 70, 70);
 
 .wp-block-wdsblocks-carousel-slide {
-	color: $color-red;
+	position: relative;
+
+	*:not(video) {
+		position: relative;
+	};
 }
