--- a/src/sass/_mixins.scss
+++ b/src/sass/_mixins.scss
@@ -1,6 +1,7 @@
 @import './variables';
 
 // Admin styling for blocks in edit mode.
+
 @mixin edit-mode( $selector: '&.edit-mode' ) {
 	#{$selector} {
 		border: 1px dashed $color-grey;
@@ -11,7 +12,7 @@
 @mixin preview-styles() {
 	position: relative;
 
-	&:before {
+	&::before {
 		content: '';
 		display: block;
 		height: 100%;
