Fix inner block width in 2020

--- a/src/blocks/carousel/editor.scss
+++ b/src/blocks/carousel/editor.scss
@@ -5,6 +5,10 @@
 
 	@include edit-mode;
 
+	.wp-block[data-type="wdsblocks/carousel-slide"] {
+		max-width: none;
+	}
+
 	&.preview-mode {
 		position: relative;
 
