Pull in glide styles

--- a/src/blocks/carousel/frontend/style.scss
+++ b/src/blocks/carousel/frontend/style.scss
@@ -1,4 +1,6 @@
 // Front-end styles.
+@import "node_modules/@glidejs/glide/src/assets/sass/glide.core";
+
 $color-red: rgb(206, 70, 70);
 
 .wp-block-wdsblocks-carousel {
