--- a/src/blocks/accordion/editor.scss
+++ b/src/blocks/accordion/editor.scss
@@ -2,11 +2,26 @@
 
 .wp-block-wdsblocks-accordion {
 	@include edit-mode( '.edit-mode &' );
+}
+
+// Edit mode styles for accordion children.
+.wp-block-wdsblocks-accordions {
 	&.edit-mode {
-		.wp-block-wdsblocks-accordion__title {
-			background-color: #ff0000;
-			&::after {
-				display: none;
+		.wp-block-wdsblocks-accordion {
+			padding: 1.5rem;
+			&__title {
+				padding: 0;
+				&::before,
+				&::after {
+					display: none;
+				}
+			}
+			&__content {
+				display: block !important;
+				height: auto !important;
+				&--inner {
+					padding: 0;
+				}
 			}
 		}
 	}
@@ -14,7 +29,6 @@
 
 .editor-styles-wrapper {
 	.wp-block-wdsblocks-accordion {
-		padding: 10px;
 		&__title {
 			position: relative;
 			width: 100%;
@@ -24,10 +38,6 @@
 			margin: 0;
 			cursor: text;
 			font-size: 22px;
-		}
-		&__content {
-			display: block !important;
-			height: auto !important;
 		}
 	}
 }
