--- a/src/blocks/accordions/editor.scss
+++ b/src/blocks/accordions/editor.scss
@@ -3,7 +3,8 @@
 
 .editor-styles-wrapper {
 	.wp-block-wdsblocks-accordions {
-		padding: 3rem 1rem;
+		padding-left: 0.5rem;
+		padding-right: 0.5rem;
 		@include edit-mode;
 		@include preview-mode;
 		&__title {
@@ -27,12 +28,12 @@
 
 		// Custom `preview-mode` styles.
 		&.preview-mode {
-			.wp-block-wdsblocks-accordion__content--inner {
-				display: none;
-			}
 			.wp-block-wdsblocks-accordion {
 				position: relative;
 				z-index: 2;
+				.wp-block-wdsblocks-accordion__title {
+					cursor: pointer;
+				}
 			}
 
 			// Open first item
@@ -49,10 +50,6 @@
 				// reduce spacing between blocks while previewing
 				.block-editor-block-list__block {
 					margin: 0;
-					&:first-child {
-						position: relative;
-						top: 1px;
-					}
 				}
 			}
 		}
