--- a/src/sass/_mixins.scss
+++ b/src/sass/_mixins.scss
@@ -6,5 +6,35 @@
 	#{$selector} {
 		border: 1px dashed $color-grey;
 		padding: 2rem;
+
+		// Fake input label.
+		.input-label {
+			font-size: 12px;
+			opacity: 0.75;
+			padding: 0 0 5px;
+
+			span.req {
+				color: $color-red;
+				display: inline-block;
+			}
+
+			&::after {
+				display: block;
+				content: "";
+				width: 15px;
+				height: 1px;
+				margin-top: 5px;
+				background-color: $color-light-grey;
+			}
+		}
+
+		[role="textbox"] {
+
+			+ .input-label {
+				padding-top: 15px;
+			}
+		}
+	}
+}
 	}
 }
