--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -2,5 +2,5 @@ $color-dark: #333;
 $color-grey: #808080;
 $color-light-grey: #efefef;
 $color-red: #b83131;
-$color-white: #ffffff;
+$color-white: #fff;
 $speed: 0.3s;
