Accordions working in preview mode 🎉

--- a/src/blocks/accordions/editor.scss
+++ b/src/blocks/accordions/editor.scss
@@ -53,6 +53,7 @@
 				}
 			}
 		}
+		// Custom `edit-mode` styles.
 		&.edit-mode {
 			.wp-block-wdsblocks-accordion__content--inner {
 				display: block;
