Remove top margin from first slide in edit mode

--- a/src/blocks/carousel/editor.scss
+++ b/src/blocks/carousel/editor.scss
@@ -10,6 +10,16 @@
 		max-width: none;
 	}
 
+	&.edit-mode {
+
+		.wp-block[data-type="wdsblocks/carousel-slide"] {
+
+			&:first-of-type {
+				margin-top: 0;
+			}
+		}
+	}
+
 	&.preview-mode {
 
 		.block-list-appender {
