--- a/src/blocks/accordion-item/editor.scss
+++ b/src/blocks/accordion-item/editor.scss
@@ -1,24 +1,31 @@
-@import '../../sass/mixins';
+@import "../../sass/mixins";
 
 .wp-block-wdsblocks-accordion {
-	@include edit-mode( '.edit-mode &' );
+
+	@include edit-mode( ".edit-mode &" );
 }
 
 // Edit mode styles for accordion children.
 .wp-block-wdsblocks-accordions {
+
 	&.edit-mode {
+
 		.wp-block-wdsblocks-accordion {
 			padding: 1.5rem;
+
 			&__title {
 				padding: 0;
+
 				&::before,
 				&::after {
 					display: none;
 				}
 			}
+
 			&__content {
 				display: block !important;
 				height: auto !important;
+
 				&--inner {
 					padding: 0;
 				}
@@ -28,7 +35,9 @@
 }
 
 .editor-styles-wrapper {
+
 	.wp-block-wdsblocks-accordion {
+
 		&__title {
 			position: relative;
 			width: 100%;
