Fixing CSS liniting issues with stylelint ignore

--- a/src/blocks/accordion-item/editor.scss
+++ b/src/blocks/accordion-item/editor.scss
@@ -13,6 +13,7 @@
 		.wp-block-wdsblocks-accordion {
 			padding: 1.5rem;
 
+			/* stylelint-disable */
 			&__title {
 				padding: 0;
 
@@ -30,6 +31,7 @@
 					padding: 0;
 				}
 			}
+			/* stylelint-enable */
 		}
 	}
 }
