--- a/src/blocks/accordions/editor.scss
+++ b/src/blocks/accordions/editor.scss
@@ -10,13 +10,14 @@
 		@include edit-mode;
 		@include preview-mode;
 
+		/* stylelint-disable */
 		&__title {
 			width: 100%;
 			display: block;
 			text-align: left;
 			margin: 0;
 		}
-
+		/* stylelint-enable */
 		.wp-block {
 			max-width: unset;
 		}
@@ -28,9 +29,11 @@
 		p {
 			margin: 0;
 
+			/* stylelint-disable */
 			&.wp-block-wdsblocks-accordions__desc {
 				margin-bottom: 1.5rem;
 			}
+			/* stylelint-enable */
 		}
 
 		// Custom `preview-mode` styles.
@@ -40,9 +43,11 @@
 				position: relative;
 				z-index: 2;
 
+				/* stylelint-disable */
 				.wp-block-wdsblocks-accordion__title {
 					cursor: pointer;
 				}
+				/* stylelint-enable */
 			}
 
 			// Open first item
@@ -50,25 +55,29 @@
 
 				.wp-block:first-of-type {
 					// get first .wp-block (InnerBlocks)
+					/* stylelint-disable */
 					.wp-block-wdsblocks-accordion__content--inner {
 						display: block;
 					}
+					/* stylelint-enable */
 				}
 			}
-
+			/* stylelint-disable */
 			.wp-block-wdsblocks-accordions__content {
 				// reduce spacing between blocks while previewing
 				.block-editor-block-list__block {
 					margin: 0;
 				}
 			}
+			/* stylelint-enable */
 		}
 		// Custom `edit-mode` styles.
 		&.edit-mode {
-
+			/* stylelint-disable */
 			.wp-block-wdsblocks-accordion__content--inner {
 				display: block;
 			}
+			/* stylelint-enable */
 		}
 	}
 }
