--- a/src/blocks/carousel-slide/frontend/style.scss
+++ b/src/blocks/carousel-slide/frontend/style.scss
@@ -6,5 +6,15 @@
 
 	*:not(video) {
 		position: relative;
+		z-index: 1;
+	}
+
+	.background-overlay {
+		background-color: inherit;
+		height: 100%;
+		left: 0;
+		position: absolute;
+		top: 0;
+		width: 100%;
 	}
 }
