Minor fixes to comments/content.

--- a/src/blocks/starter/editor.scss
+++ b/src/blocks/starter/editor.scss
@@ -1,6 +1,6 @@
 //--------------------------------------------------------------
 // EDITOR STYLES
-// CSS for just Backend enqueued after style.scss
+// CSS for just the Backend enqueued after style.scss
 //--------------------------------------------------------------
 @import "../../sass/mixins";
 
