--- a/src/blocks/starter/frontend/style.scss
+++ b/src/blocks/starter/frontend/style.scss
@@ -2,8 +2,8 @@
 // STYLES
 // CSS for both Frontend+Backend.
 //--------------------------------------------------------------
-@import "../../../sass/variables";
+@import '../../../sass/variables';
 
 .wp-block-wdsblocks-starter {
-    padding: 3rem;
+	padding: 3rem;
 } // .wp-block-wdsblocks-starter
