--- a/src/blocks/accordions/editor.scss
+++ b/src/blocks/accordions/editor.scss
@@ -1,5 +1,5 @@
-@import "../../sass/variables";
-@import "../../sass/mixins";
+@import '../../sass/variables';
+@import '../../sass/mixins';
 
 .editor-styles-wrapper {
 
@@ -51,7 +51,7 @@
 			}
 
 			// Open first item
-			&[data-open-first="true"] {
+			&[data-open-first='true'] {
 
 				.wp-block:first-of-type {
 					// get first .wp-block (InnerBlocks)
