--- a/src/blocks/carousel-slide/editor.scss
+++ b/src/blocks/carousel-slide/editor.scss
@@ -1,11 +1,11 @@
 // WordPress editor styles.
-@import "../../sass/mixins";
+@import '../../sass/mixins';
 
 .wp-block-wdsblocks-carousel-slide {
 
-	@include edit-mode(".edit-mode &");
+	@include edit-mode('.edit-mode &');
 
-	.wp-block[data-type="core/heading"] {
+	.wp-block[data-type='core/heading'] {
 		margin-left: auto;
 		margin-right: auto;
 	}
