--- a/src/blocks/carousel/editor.scss
+++ b/src/blocks/carousel/editor.scss
@@ -1,18 +1,18 @@
 // WordPress editor styles.
-@import "../../sass/mixins";
+@import '../../sass/mixins';
 
 .wp-block-wdsblocks-carousel {
 
 	@include edit-mode;
 	@include preview-mode;
 
-	.wp-block[data-type="wdsblocks/carousel-slide"] {
+	.wp-block[data-type='wdsblocks/carousel-slide'] {
 		max-width: none;
 	}
 
 	&.edit-mode {
 
-		.wp-block[data-type="wdsblocks/carousel-slide"] {
+		.wp-block[data-type='wdsblocks/carousel-slide'] {
 
 			&:first-of-type {
 				margin-top: 0;
@@ -26,7 +26,7 @@
 			display: none;
 		}
 
-		.wp-block[data-type="wdsblocks/carousel-slide"] {
+		.wp-block[data-type='wdsblocks/carousel-slide'] {
 			margin-bottom: 0;
 			margin-top: 0;
 			max-width: none;
