Fix starter block padding

--- a/src/blocks/starter/frontend/style.scss
+++ b/src/blocks/starter/frontend/style.scss
@@ -5,5 +5,5 @@
 @import '../../../sass/variables';
 
 .wp-block-wdsblocks-starter {
-	padding: 3rem;
+	padding: 0;
 } // .wp-block-wdsblocks-starter
