dependencies bulk update and minor formating

--- a/src/blocks/accordion-item/frontend/style.scss
+++ b/src/blocks/accordion-item/frontend/style.scss
@@ -1,7 +1,8 @@
 // Front-end styles.
-@import '../../../sass/variables';
+@import "../../../sass/variables";
 
 .wp-block-wdsblocks {
+	
 	&-accordion {
 		border: 1px solid #efefef;
 
@@ -26,7 +27,7 @@
 
 			&::after,
 			&::before {
-				content: '';
+				content: "";
 				position: absolute;
 				top: 22px;
 				right: 22px;
@@ -35,14 +36,14 @@
 				border-width: 0 3px 3px 0;
 				display: inline-block;
 				padding: 3px;
-				transform: rotate( 45deg );
+				transform: rotate(45deg);
 			}
 
 			&::before {
 				top: 26px;
 				opacity: 0;
 				visibility: hidden;
-				transform: rotate( -135deg );
+				transform: rotate(-135deg);
 			}
 		}
 
