--- a/src/blocks/starter/frontend/style.scss
+++ b/src/blocks/starter/frontend/style.scss
@@ -2,7 +2,7 @@
 // STYLES
 // CSS for both Frontend+Backend.
 //--------------------------------------------------------------
-@import '../../../sass/variables';
+@import "../../../sass/variables";
 
 .wp-block-wdsblocks-starter {
 	padding: 3rem;
