--- a/src/blocks/accordion-item/editor.scss
+++ b/src/blocks/accordion-item/editor.scss
@@ -1,12 +1,14 @@
-@import '../../sass/mixins';
+@import "../../sass/mixins";
 
 .wp-block-wdsblocks-accordion {
-	@include edit-mode( '.edit-mode &' );
+	@include edit-mode(".edit-mode &");
 }
 
 // Edit mode styles for accordion children.
 .wp-block-wdsblocks-accordions {
+
 	&.edit-mode {
+
 		.wp-block-wdsblocks-accordion {
 			padding: 1.5rem;
 
@@ -34,7 +36,9 @@
 }
 
 .editor-styles-wrapper {
+	
 	.wp-block-wdsblocks-accordion {
+	
 		&__title {
 			position: relative;
 			width: 100%;
