--- a/src/blocks/accordions/editor.scss
+++ b/src/blocks/accordions/editor.scss
@@ -1,7 +1,8 @@
-@import '../../sass/variables';
-@import '../../sass/mixins';
+@import "../../sass/variables";
+@import "../../sass/mixins";
 
 .editor-styles-wrapper {
+	
 	.wp-block-wdsblocks-accordions {
 		padding-left: 0.5rem;
 		padding-right: 0.5rem;
@@ -37,6 +38,7 @@
 
 		// Custom `preview-mode` styles.
 		&.preview-mode {
+
 			.wp-block-wdsblocks-accordion {
 				position: relative;
 				z-index: 2;
@@ -49,7 +51,8 @@
 			}
 
 			// Open first item
-			&[data-open-first='true'] {
+			&[data-open-first="true"] {
+
 				.wp-block:first-of-type {
 					// get first .wp-block (InnerBlocks)
 					/* stylelint-disable */
