--- a/src/blocks/starter/editor.scss
+++ b/src/blocks/starter/editor.scss
@@ -2,9 +2,9 @@
 // EDITOR STYLES
 // CSS for just the Backend enqueued after style.scss
 //--------------------------------------------------------------
-@import '../../sass/mixins';
+@import "../../sass/mixins";
 
-[data-type='wdsblocks/starter'] {
+[data-type="wdsblocks/starter"] {
 	margin-bottom: 0;
 	margin-top: 0;
 
